--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQJoinTotall.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQJoinTotall.storyboard
@@ -36,11 +36,10 @@
                                         </connections>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="故障地点" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSg-0K-29H">
-                                        <rect key="frame" x="190" y="7" width="140" height="30"/>
+                                        <rect key="frame" x="185" y="7" width="145" height="30"/>
                                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="M8V-lU-h8E"/>
-                                            <constraint firstAttribute="width" constant="140" id="Sm7-lP-9ng"/>
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -103,6 +102,7 @@
                                     <constraint firstItem="IaG-cc-Cnm" firstAttribute="centerY" secondItem="xSE-yM-Hwt" secondAttribute="centerY" id="t6f-YP-kgM"/>
                                     <constraint firstItem="95b-d4-me6" firstAttribute="leading" secondItem="IaG-cc-Cnm" secondAttribute="trailing" constant="2" id="wyR-OO-tv3"/>
                                     <constraint firstItem="zAa-vZ-0OQ" firstAttribute="leading" secondItem="wSg-0K-29H" secondAttribute="trailing" constant="5" id="yjT-yF-1ht"/>
+                                    <constraint firstItem="wSg-0K-29H" firstAttribute="leading" secondItem="95b-d4-me6" secondAttribute="trailing" constant="3" id="ylY-3y-zKd"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hyb-dz-fWA">
