--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/PersonCore.storyboard
@@ -182,7 +182,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kBF-LV-Tp6">
                                 <rect key="frame" x="0.0" y="277" width="375" height="44"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="项目选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xw-Xf-QC6">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="默认项目" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xw-Xf-QC6">
                                         <rect key="frame" x="55" y="12" width="70" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -204,6 +204,12 @@
                                             <constraint firstAttribute="height" constant="35" id="vzi-Oa-BSH"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="项目选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmb-QH-hBt">
+                                        <rect key="frame" x="245" y="12" width="70" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
@@ -211,8 +217,10 @@
                                     <constraint firstAttribute="trailing" secondItem="91R-Tk-I1q" secondAttribute="trailing" constant="15" id="1te-Oj-3H7"/>
                                     <constraint firstAttribute="height" constant="44" id="2h1-F6-wao"/>
                                     <constraint firstItem="0Xw-Xf-QC6" firstAttribute="leading" secondItem="kBF-LV-Tp6" secondAttribute="leading" constant="55" id="6pj-ax-tNC"/>
+                                    <constraint firstItem="91R-Tk-I1q" firstAttribute="leading" secondItem="Qmb-QH-hBt" secondAttribute="trailing" constant="5" id="FCG-j2-Whe"/>
                                     <constraint firstItem="BxX-iS-Qtk" firstAttribute="leading" secondItem="kBF-LV-Tp6" secondAttribute="leading" constant="8" id="GE3-N3-DTJ"/>
                                     <constraint firstItem="BxX-iS-Qtk" firstAttribute="centerY" secondItem="kBF-LV-Tp6" secondAttribute="centerY" id="Q2c-EY-rDI"/>
+                                    <constraint firstItem="Qmb-QH-hBt" firstAttribute="centerY" secondItem="kBF-LV-Tp6" secondAttribute="centerY" id="SgK-sF-Du6"/>
                                     <constraint firstItem="91R-Tk-I1q" firstAttribute="centerY" secondItem="kBF-LV-Tp6" secondAttribute="centerY" id="So9-Mo-hU7"/>
                                     <constraint firstItem="0Xw-Xf-QC6" firstAttribute="centerY" secondItem="kBF-LV-Tp6" secondAttribute="centerY" id="m6h-bw-Kx7"/>
                                 </constraints>
