--- a/OpticalValleyUnite/Classes/UI/Home/View/MessageView.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/View/MessageView.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,24 +13,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MessageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="305" height="157"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="199"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待办事项" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KMi-RY-Qb3">
-                    <rect key="frame" x="120" y="11" width="66" height="20"/>
+                    <rect key="frame" x="157.5" y="11" width="66" height="20"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pNQ-xM-m81">
-                    <rect key="frame" x="0.0" y="42" width="305" height="1"/>
+                    <rect key="frame" x="1" y="42" width="379" height="1"/>
                     <color key="backgroundColor" red="0.94901960784313721" green="0.95686274509803915" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="UIf-ZL-qPE"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zEz-Ku-2Yw">
-                    <rect key="frame" x="29" y="43" width="40" height="114"/>
+                    <rect key="frame" x="29" y="43" width="40" height="156"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czm-Hk-1Cf">
                             <rect key="frame" x="0.0" y="15" width="40" height="40"/>
@@ -58,7 +59,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9D9-Nj-8RD">
-                    <rect key="frame" x="123" y="43" width="40" height="114"/>
+                    <rect key="frame" x="123" y="43" width="40" height="156"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9dM-Gf-ZAW">
                             <rect key="frame" x="0.0" y="15" width="40" height="40"/>
@@ -87,7 +88,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2b-6b-oPv">
-                    <rect key="frame" x="289" y="-16" width="32" height="32"/>
+                    <rect key="frame" x="349" y="-16" width="32" height="32"/>
                     <state key="normal" image="exit"/>
                     <connections>
                         <action selector="closeBtnClick" destination="iN0-l3-epB" eventType="touchUpInside" id="TdM-1V-TTy"/>
@@ -99,9 +100,9 @@
                 <constraint firstItem="b2b-6b-oPv" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-16" id="0mA-SI-Cly"/>
                 <constraint firstAttribute="bottom" secondItem="9D9-Nj-8RD" secondAttribute="bottom" id="Atu-Wy-JNT"/>
                 <constraint firstItem="pNQ-xM-m81" firstAttribute="top" secondItem="KMi-RY-Qb3" secondAttribute="bottom" constant="11" id="H4A-F1-bbo"/>
-                <constraint firstItem="pNQ-xM-m81" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IR9-np-Zb6"/>
-                <constraint firstAttribute="trailing" secondItem="pNQ-xM-m81" secondAttribute="trailing" id="WXB-KK-Bvs"/>
-                <constraint firstAttribute="trailing" secondItem="b2b-6b-oPv" secondAttribute="trailing" constant="-16" id="eSO-99-6Qw"/>
+                <constraint firstItem="pNQ-xM-m81" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="1" id="IR9-np-Zb6"/>
+                <constraint firstAttribute="trailing" secondItem="pNQ-xM-m81" secondAttribute="trailing" constant="1" id="WXB-KK-Bvs"/>
+                <constraint firstAttribute="trailing" secondItem="b2b-6b-oPv" secondAttribute="trailing" id="eSO-99-6Qw"/>
                 <constraint firstItem="9D9-Nj-8RD" firstAttribute="leading" secondItem="zEz-Ku-2Yw" secondAttribute="trailing" constant="54" id="int-3N-QNd"/>
                 <constraint firstAttribute="bottom" secondItem="zEz-Ku-2Yw" secondAttribute="bottom" id="itq-wv-40F"/>
                 <constraint firstItem="KMi-RY-Qb3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="11" id="kw5-sd-6VX"/>
@@ -120,6 +121,7 @@
                 <outlet property="surveillanceWorkOrderBtn" destination="9dM-Gf-ZAW" id="Co6-0f-0Ij"/>
                 <outlet property="workOrderBtn" destination="czm-Hk-1Cf" id="NSb-uS-Egw"/>
             </connections>
+            <point key="canvasLocation" x="63.5" y="31.5"/>
         </view>
     </objects>
     <resources>
