设置火警的抽屉工单,可以实现滚动,待测试

--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQDrawerViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQDrawerViewController.xib
@@ -11,9 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQDrawerViewController" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
+                <outlet property="contentScrollView" destination="znT-b1-SnV" id="O3B-kP-sTR"/>
                 <outlet property="falsePositerNum" destination="iwK-e1-wDH" id="wsz-iI-Rb0"/>
                 <outlet property="fireNum" destination="HAT-ui-i6E" id="evA-FS-VdR"/>
                 <outlet property="joinNum" destination="Gfg-Z7-PQA" id="hNy-bz-CjY"/>
+                <outlet property="lastView" destination="Ku1-Bc-NfA" id="9DZ-Hh-7Ei"/>
                 <outlet property="userImageView" destination="4mi-i7-Ji2" id="Z6b-Ic-vAa"/>
                 <outlet property="userName" destination="klp-Eh-dN1" id="5cY-U9-mUg"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -25,23 +27,23 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="WX1-KF-2RQ">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pic_default" translatesAutoresizingMaskIntoConstraints="NO" id="4mi-i7-Ji2">
-                            <rect key="frame" x="153" y="40" width="70" height="70"/>
+                            <rect key="frame" x="153" y="20" width="70" height="70"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="70" id="FtD-hG-I5t"/>
                                 <constraint firstAttribute="height" constant="70" id="XwF-DX-FPf"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="李晓娜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klp-Eh-dN1">
-                            <rect key="frame" x="161" y="120" width="52" height="21"/>
+                            <rect key="frame" x="161" y="100" width="52" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4D-oc-JCB">
-                            <rect key="frame" x="156" y="151" width="62" height="30"/>
+                            <rect key="frame" x="156" y="131" width="62" height="30"/>
                             <state key="normal" title="个人资料"/>
                             <connections>
                                 <action selector="personalProfileButtonClick:" destination="-1" eventType="touchUpInside" id="E92-Yu-jxo"/>
@@ -53,20 +55,20 @@
                         <constraint firstItem="klp-Eh-dN1" firstAttribute="top" secondItem="4mi-i7-Ji2" secondAttribute="bottom" constant="10" id="7GS-Yc-VuW"/>
                         <constraint firstItem="klp-Eh-dN1" firstAttribute="centerX" secondItem="WX1-KF-2RQ" secondAttribute="centerX" id="8jh-S0-Ixa"/>
                         <constraint firstItem="N4D-oc-JCB" firstAttribute="centerX" secondItem="WX1-KF-2RQ" secondAttribute="centerX" id="8oM-Z5-8lf"/>
-                        <constraint firstItem="4mi-i7-Ji2" firstAttribute="top" secondItem="WX1-KF-2RQ" secondAttribute="top" constant="40" id="MSL-vh-5Vi"/>
+                        <constraint firstItem="4mi-i7-Ji2" firstAttribute="top" secondItem="WX1-KF-2RQ" secondAttribute="top" constant="20" id="MSL-vh-5Vi"/>
                         <constraint firstItem="N4D-oc-JCB" firstAttribute="top" secondItem="klp-Eh-dN1" secondAttribute="bottom" constant="10" id="Mdh-aH-iex"/>
                         <constraint firstItem="4mi-i7-Ji2" firstAttribute="centerX" secondItem="WX1-KF-2RQ" secondAttribute="centerX" id="aUh-5y-cwY"/>
-                        <constraint firstAttribute="height" constant="200" id="o5G-0c-mmg"/>
+                        <constraint firstAttribute="height" constant="180" id="o5G-0c-mmg"/>
                     </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="znT-b1-SnV">
-                    <rect key="frame" x="0.0" y="200" width="375" height="357"/>
+                    <rect key="frame" x="0.0" y="180" width="375" height="377"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cRz-UT-HBy">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="357"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="377"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3yy-sG-PAE">
-                                    <rect key="frame" x="0.0" y="337" width="375" height="20"/>
+                                    <rect key="frame" x="0.0" y="357" width="375" height="20"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="系统操作" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jDB-pF-6t8">
                                             <rect key="frame" x="30" y="2.5" width="60" height="15"/>
